# ls32-hid-lib

./: Cargo.toml  LICENSE  README.org
src/: charset.rs  lib.rs
